Fixed wrong position of quotes' author description for old browsers

--- a/src/less/blocks/user_box.less
+++ b/src/less/blocks/user_box.less
@@ -49,6 +49,10 @@
     .user_box__avatar + & {
       margin-left: 6px;
     }
+
+    &-flexless {
+      display: block;
+    }
   }
 
   &__avatar {
